resources/app-sre/try-openshift-com-stage/try-openshift-com.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: try-openshift-com
  name: try-openshift-com
spec:
  type: ClusterIP
  ports:
    - name: 80-tcp
      port: 80
      protocol: TCP
      targetPort: 80
    - name: 443-tcp
      port: 443
      protocol: TCP
      targetPort: 443
    - name: 2015-tcp
      port: 2015
      protocol: TCP
      targetPort: 2015
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
  selector:
    app: try-openshift-com
    deploymentconfig: try-openshift-com
