resources/app-sre/try-openshift-com-stage/try-openshift-com.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: try-openshift-com
spec:
  host: try.stage.openshift.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: try-openshift-com
    weight: 100
  wildcardPolicy: None
